--- a/style.css
+++ b/style.css
@@ -28,28 +28,30 @@ li:hover{
 	margin:0px;
 
 }
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 600px) {
+	ul{
+	margin :0px;
+	}
 	li{
-	height: 60px;
-	width: 60px;
+	height: 75px;
+	width: 75px;
 	text-align: center;
 	vertical-align: middle;
-	font-size: 50px;
+	font-size: 65px;
 	cursor: pointer;
 	background-color:white;
 	border-radius:5px;
 	transition: all 0.3s ;
-	margin:3px;
+	margin:4px;
 	display:inline-block;
 	box-shadow: 0 3px 9px rgba(0, 0, 0, 0.3);
 	padding-bottom:24px;
-}
-li:hover{
-	height:70px;
-	width:70px;
-	margin:0px;
-
-}	
+	}
+	li:hover{
+		height:80px;
+		width:80px;
+		margin:0px;
+	}	
 }
 
 /*----Header style----*/
@@ -66,6 +68,23 @@ table {
 td{
 	padding:10px 0px 0px 0px;
 	font-weight: 500;
+}
+@media only screen and (max-width: 600px) {
+	table {
+	margin: 0px 0px 20px 40px;
+	margin-left: 58px;
+	width:249px;
+	background-color: rgba(0,0,0, 0.2);
+	color:white;
+	border-radius:5px;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3)
+	justify-content:center;
+
+}
+td{
+	padding:10px 0px 0px 0px;
+	font-weight: 500;
+}
 }
 /*----Styles that Preetam created-----*/
 .jumbotron {
