--- a/style.css
+++ b/style.css
@@ -28,6 +28,27 @@ li:hover{
 	margin:0px;
 
 }
+.box{
+	height: 120px;
+	width: 120px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 90px;
+	cursor: pointer;
+	background-color:white;
+	border-radius:5px;
+	transition: all 0.3s ;
+	margin:8px;
+	display:inline-block;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+	padding-bottom:24px;
+}
+.box:hover{
+	height:140px;
+	width:140px;
+	margin:0px;
+
+}
 @media only screen and (max-width: 600px) {
 	ul{
 	margin :0px;
@@ -56,7 +77,7 @@ li:hover{
 
 /*----Header style----*/
 table {
-	margin: 0px 0px 20px 40px;
+	margin: 0px 0px 20px 30px;
 
 	width:400px;
 	background-color: rgba(0,0,0, 0.2);
@@ -124,4 +145,70 @@ table tr td:last-child {
 .foot {
 	padding-top: 70px;
 	margin-bottom: 10px;
+}
+
+.grow{
+	
+  animation-name: example;
+  animation-duration: 1s;
+}
+
+
+@keyframes example {
+ from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+.hide{
+	display:none;
+	visibility: hidden;
+}
+.move-up{
+	animation-name:action;
+	animation-duration:1s;
+}
+ @keyframes action {
+        0% { transform: translateY(40px); }
+        100% { transform: translateY(0px); }
+    }
+.move-down{
+	animation-name:action-d;
+	animation-duration:1s;
+}
+ @keyframes action-d {
+        0% { transform: translateY(0px);opacity: 1; }
+        60% { transform: translateY(40px); }
+        100% { transform: translateY(40px); opacity: 0;}
+    }
+
+.grow-out{
+	animation-name: example-out;
+  animation-duration: 1s;
+}
+@keyframes example-out {
+ 0% {
+    transform: scale(1);
+    opacity:1;
+  }
+  100% {
+    transform: scale(0);
+    opacity:0;
+  }
+}
+#vs1,#vs2{
+	margin:10px auto 10px auto;
+	padding: 10px;
+	background-color: white;
+	width:300px;
+	border:3px solid black;
+	border-radius:20px;
+	box-shadow: 0 3px 9px rgba(0, 0, 0, 0.3);
+	font-weight: 600;
+
+}
+#level{
+	height:200px;
 }
